--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,17 +8,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-05 16:33+0400\n"
+"POT-Creation-Date: 2012-05-05 16:38+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: settings.py:44
 msgid "Русский"
-msgstr "Russian"
+msgstr ""
 
 #: settings.py:45
 msgid "English"
@@ -26,7 +28,7 @@ msgstr ""
 
 #: main/templates/index.html:8
 msgid "History of the Festival"
-msgstr ""
+msgstr "История Фестиваля"
 
 #: main/templates/index.html:13
 msgid ""
@@ -36,55 +38,66 @@ msgid ""
 "making marathon KinoWeekend took place in 6 cities of Russia at the same "
 "time."
 msgstr ""
+"Первый фестиваль КиноWeekend состоялся в октября 2010г. в Санкт-Петербурге. "
+"Идею кино марафона подхватили и другие города, филиалы Молодежной "
+"Киностудии. Уже в мае 2011г. прошел федеральный фестиваль одновременно в 6 "
+"городах, кино марафон поддержали  Москва, Санкт-Петербург, Казань, Нижний "
+"Новгород, Пермь и Екатеринбург. За историю фестиваля было снято более 100 "
+"короткометражных работ! Вашему вниманию некоторые из них, отмеченные жюри и "
+"зрителями!"
 
 #: templates/navbar.html:15
 msgid "О фестивале"
-msgstr "About"
+msgstr ""
 
 #: templates/navbar.html:16
 msgid "Положение"
-msgstr "Condition"
+msgstr ""
 
 #: templates/navbar.html:17
 msgid "Расписание"
-msgstr "Schedule"
+msgstr ""
 
 #: templates/navbar.html:18
 msgid "Новости "
-msgstr "News"
+msgstr ""
 
 #: templates/navbar.html:19
 msgid "Стоп!Снято! "
-msgstr "Stop!"
+msgstr ""
 
 #: templates/navbar.html:21 templates/navbar.html.py:23
 msgid "Контакты "
-msgstr "Contact"
+msgstr ""
 
 #: templates/navbar.html:25
 msgid "Наша Команда "
-msgstr "Our team"
+msgstr ""
 
 #: templates/navbar.html:27
 msgid "Волонтерам "
-msgstr "Volunteers"
+msgstr ""
 
 #: templates/navbar.html:28
 msgid "Прессе "
-msgstr "Press"
+msgstr ""
 
 #: templates/navbar.html:31
 msgid "Форум"
-msgstr "Forum"
+msgstr ""
 
 #: templates/simple.html:3
 msgid "en"
-msgstr ""
+msgstr "ru"
 
 #: templates/simple.html:102
 msgid "Follow us on"
-msgstr ""
+msgstr "Следите за нами"
 
 #: templates/simple.html:103
 msgid "Vkontakte"
-msgstr ""
+msgstr "Вконтакте"
+
+#: templates/simple.html:103
+msgid "and"
+msgstr "и"
